--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
+    "element-ui": "^2.15.8",
     "material-icons": "^1.10.9",
     "moment": "^2.29.3",
     "vue": "^2.6.11",
