--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-toasted": "^1.1.28",
+    "vuetify": "^2.6.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -26,6 +27,11 @@
     "@vue/cli-service": "~4.5.15",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vuetify-loader": "^1.7.0",
+    "vue-template-compiler": "^2.6.11",
+    "vue-cli-plugin-vuetify": "~2.4.7"
+    
   }
 }
