--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.1.3",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.8",
+    "jquery": "3.3.1",
+    "jsdom": "^19.0.0",
     "material-icons": "^1.10.9",
+    "mavon-editor": "^2.10.4",
     "moment": "^2.29.3",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.2.0",
     "vue-toasted": "^1.1.28",
     "vuetify": "^2.6.5",
@@ -29,9 +35,8 @@
     "less-loader": "^5.0.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "vuetify-loader": "^1.7.0",
+    "vue-cli-plugin-vuetify": "~2.4.7",
     "vue-template-compiler": "^2.6.11",
-    "vue-cli-plugin-vuetify": "~2.4.7"
-    
+    "vuetify-loader": "^1.7.0"
   }
 }
