--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.8",
+    "highlight.js": "^11.5.1",
+    "jquery": "^3.6.0",
     "material-icons": "^1.10.9",
     "mavon-editor": "^2.10.4",
     "moment": "^2.29.3",
     "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vue-toasted": "^1.1.28",
     "vuetify": "^2.6.5",
     "vuex": "^3.4.0"
