--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vue/cli-service": "~4.5.15",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.7",
