--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.8",
     "highlight.js": "^11.5.1",
     "jquery": "^3.6.0",
+    "marked": "^4.0.16",
     "material-icons": "^1.10.9",
     "mavon-editor": "^2.10.4",
     "moment": "^2.29.3",
