--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/js": "^6.5.95",
     "axios": "^0.27.2",
+    "babel-runtime": "^6.26.0",
     "bootstrap": "5.1.3",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
