--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.3",
     "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
+    "vue-material-design-icons": "^5.0.0",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.2",
     "vue-toasted": "^1.1.28",
